src/Compiler/parser.out
Created by PLY version 3.11 (http://www.dabeaz.com/ply)

Unused terminals:

    NOT

Grammar

Rule 0     S' -> program
Rule 1     program -> functionlist block
Rule 2     functionlist -> function functionlist
Rule 3     functionlist -> empty
Rule 4     function -> FUNCTION ID ( argument ) { block RETURN boolean }
Rule 5     function -> FUNCTION ID ( argument ) { block }
Rule 6     argument -> ID , argument
Rule 7     argument -> ID
Rule 8     argument -> empty
Rule 9     empty -> <empty>
Rule 10    block -> statement block
Rule 11    block -> statement
Rule 12    statement -> declaration
Rule 13    statement -> initialization
Rule 14    statement -> assign
Rule 15    statement -> funcall
Rule 16    statement -> unary
Rule 17    statement -> while
Rule 18    statement -> for
Rule 19    statement -> if
Rule 20    statement -> print
Rule 21    declaration -> VARIABLE ID
Rule 22    initialization -> VARIABLE ID = boolean
Rule 23    assign -> ID = boolean
Rule 24    unary -> increment
Rule 25    unary -> decrement
Rule 26    increment -> ID INCRMNT
Rule 27    decrement -> ID DECRMNT
Rule 28    funcall -> ID ( paramlist )
Rule 29    paramlist -> boolean , paramlist
Rule 30    paramlist -> boolean
Rule 31    paramlist -> empty
Rule 32    if -> IF boolean { block } elif
Rule 33    elif -> ELSEIF boolean { block } elif
Rule 34    elif -> ELSE { block }
Rule 35    elif -> empty
Rule 36    while -> WHILE boolean { block }
Rule 37    for -> FOR ( initialization , boolean , assign ) { block }
Rule 38    for -> FOR ( initialization , boolean , unary ) { block }
Rule 39    for -> FOR ID IN RANGE ( expression , expression ) { block }
Rule 40    print -> PRINT ( plist )
Rule 41    plist -> pstat , plist
Rule 42    plist -> pstat
Rule 43    pstat -> boolean
Rule 44    boolean -> boolean OR boolterm
Rule 45    boolean -> boolterm
Rule 46    boolterm -> boolterm AND boolterm1
Rule 47    boolterm -> boolterm1
Rule 48    boolterm1 -> ! boolterm2
Rule 49    boolterm1 -> boolterm2
Rule 50    boolterm2 -> condition
Rule 51    boolterm2 -> expression
Rule 52    boolterm2 -> FALSE
Rule 53    boolterm2 -> TRUE
Rule 54    condition -> expression > expression
Rule 55    condition -> expression < expression
Rule 56    condition -> expression GTEQL expression
Rule 57    condition -> expression LTEQL expression
Rule 58    condition -> expression NOTEQL expression
Rule 59    condition -> expression BOOLEQL expression
Rule 60    expression -> expression + term
Rule 61    expression -> expression - term
Rule 62    expression -> term
Rule 63    term -> term * factor1
Rule 64    term -> term / factor1
Rule 65    term -> factor1
Rule 66    factor1 -> factor1 % factor
Rule 67    factor1 -> factor
Rule 68    factor -> ID
Rule 69    factor -> NUMBER
Rule 70    factor -> STRING
Rule 71    factor -> ( expression )
Rule 72    factor -> ternary
Rule 73    ternary -> ( boolean ) ? ( boolean : boolean )
Rule 74    factor -> funcall

Terminals, with rules where they appear

!                    : 48
%                    : 66
(                    : 4 5 28 37 38 39 40 71 73 73
)                    : 4 5 28 37 38 39 40 71 73 73
*                    : 63
+                    : 60
,                    : 6 29 37 37 38 38 39 41
-                    : 61
/                    : 64
:                    : 73
<                    : 55
=                    : 22 23
>                    : 54
?                    : 73
AND                  : 46
BOOLEQL              : 59
DECRMNT              : 27
ELSE                 : 34
ELSEIF               : 33
FALSE                : 52
FOR                  : 37 38 39
FUNCTION             : 4 5
GTEQL                : 56
ID                   : 4 5 6 7 21 22 23 26 27 28 39 68
IF                   : 32
IN                   : 39
INCRMNT              : 26
LTEQL                : 57
NOT                  : 
NOTEQL               : 58
NUMBER               : 69
OR                   : 44
PRINT                : 40
RANGE                : 39
RETURN               : 4
STRING               : 70
TRUE                 : 53
VARIABLE             : 21 22
WHILE                : 36
error                : 
{                    : 4 5 32 33 34 36 37 38 39
}                    : 4 5 32 33 34 36 37 38 39

Nonterminals, with rules where they appear

argument             : 4 5 6
assign               : 14 37
block                : 1 4 5 10 32 33 34 36 37 38 39
boolean              : 4 22 23 29 30 32 33 36 37 38 43 44 73 73 73
boolterm             : 44 45 46
boolterm1            : 46 47
boolterm2            : 48 49
condition            : 50
declaration          : 12
decrement            : 25
elif                 : 32 33
empty                : 3 8 31 35
expression           : 39 39 51 54 54 55 55 56 56 57 57 58 58 59 59 60 61 71
factor               : 66 67
factor1              : 63 64 65 66
for                  : 18
funcall              : 15 74
function             : 2
functionlist         : 1 2
if                   : 19
increment            : 24
initialization       : 13 37 38
paramlist            : 28 29
plist                : 40 41
print                : 20
program              : 0
pstat                : 41 42
statement            : 10 11
term                 : 60 61 62 63 64
ternary              : 72
unary                : 16 38
while                : 17

Parsing method: LALR

state 0

    (0) S' -> . program
    (1) program -> . functionlist block
    (2) functionlist -> . function functionlist
    (3) functionlist -> . empty
    (4) function -> . FUNCTION ID ( argument ) { block RETURN boolean }
    (5) function -> . FUNCTION ID ( argument ) { block }
    (9) empty -> .

    FUNCTION        shift and go to state 5
    VARIABLE        reduce using rule 9 (empty -> .)
    ID              reduce using rule 9 (empty -> .)
    WHILE           reduce using rule 9 (empty -> .)
    FOR             reduce using rule 9 (empty -> .)
    IF              reduce using rule 9 (empty -> .)
    PRINT           reduce using rule 9 (empty -> .)

    program                        shift and go to state 1
    functionlist                   shift and go to state 2
    function                       shift and go to state 3
    empty                          shift and go to state 4

state 1

    (0) S' -> program .



state 2

    (1) program -> functionlist . block
    (10) block -> . statement block
    (11) block -> . statement
    (12) statement -> . declaration
    (13) statement -> . initialization
    (14) statement -> . assign
    (15) statement -> . funcall
    (16) statement -> . unary
    (17) statement -> . while
    (18) statement -> . for
    (19) statement -> . if
    (20) statement -> . print
    (21) declaration -> . VARIABLE ID
    (22) initialization -> . VARIABLE ID = boolean
    (23) assign -> . ID = boolean
    (28) funcall -> . ID ( paramlist )
    (24) unary -> . increment
    (25) unary -> . decrement
    (36) while -> . WHILE boolean { block }
    (37) for -> . FOR ( initialization , boolean , assign ) { block }
    (38) for -> . FOR ( initialization , boolean , unary ) { block }
    (39) for -> . FOR ID IN RANGE ( expression , expression ) { block }
    (32) if -> . IF boolean { block } elif
    (40) print -> . PRINT ( plist )
    (26) increment -> . ID INCRMNT
    (27) decrement -> . ID DECRMNT

    VARIABLE        shift and go to state 17
    ID              shift and go to state 18
    WHILE           shift and go to state 21
    FOR             shift and go to state 22
    IF              shift and go to state 23
    PRINT           shift and go to state 24

    block                          shift and go to state 6
    statement                      shift and go to state 7
    declaration                    shift and go to state 8
    initialization                 shift and go to state 9
    assign                         shift and go to state 10
    funcall                        shift and go to state 11
    unary                          shift and go to state 12
    while                          shift and go to state 13
    for                            shift and go to state 14
    if                             shift and go to state 15
    print                          shift and go to state 16
    increment                      shift and go to state 19
    decrement                      shift and go to state 20

state 3

    (2) functionlist -> function . functionlist
    (2) functionlist -> . function functionlist
    (3) functionlist -> . empty
    (4) function -> . FUNCTION ID ( argument ) { block RETURN boolean }
    (5) function -> . FUNCTION ID ( argument ) { block }
    (9) empty -> .

    FUNCTION        shift and go to state 5
    VARIABLE        reduce using rule 9 (empty -> .)
    ID              reduce using rule 9 (empty -> .)
    WHILE           reduce using rule 9 (empty -> .)
    FOR             reduce using rule 9 (empty -> .)
    IF              reduce using rule 9 (empty -> .)
    PRINT           reduce using rule 9 (empty -> .)

    function                       shift and go to state 3
    functionlist                   shift and go to state 25
    empty                          shift and go to state 4

state 4

    (3) functionlist -> empty .

    VARIABLE        reduce using rule 3 (functionlist -> empty .)
    ID              reduce using rule 3 (functionlist -> empty .)
    WHILE           reduce using rule 3 (functionlist -> empty .)
    FOR             reduce using rule 3 (functionlist -> empty .)
    IF              reduce using rule 3 (functionlist -> empty .)
    PRINT           reduce using rule 3 (functionlist -> empty .)


state 5

    (4) function -> FUNCTION . ID ( argument ) { block RETURN boolean }
    (5) function -> FUNCTION . ID ( argument ) { block }

    ID              shift and go to state 26


state 6

    (1) program -> functionlist block .

    $end            reduce using rule 1 (program -> functionlist block .)


state 7

    (10) block -> statement . block
    (11) block -> statement .
    (10) block -> . statement block
    (11) block -> . statement
    (12) statement -> . declaration
    (13) statement -> . initialization
    (14) statement -> . assign
    (15) statement -> . funcall
    (16) statement -> . unary
    (17) statement -> . while
    (18) statement -> . for
    (19) statement -> . if
    (20) statement -> . print
    (21) declaration -> . VARIABLE ID
    (22) initialization -> . VARIABLE ID = boolean
    (23) assign -> . ID = boolean
    (28) funcall -> . ID ( paramlist )
    (24) unary -> . increment
    (25) unary -> . decrement
    (36) while -> . WHILE boolean { block }
    (37) for -> . FOR ( initialization , boolean , assign ) { block }
    (38) for -> . FOR ( initialization , boolean , unary ) { block }
    (39) for -> . FOR ID IN RANGE ( expression , expression ) { block }
    (32) if -> . IF boolean { block } elif
    (40) print -> . PRINT ( plist )
    (26) increment -> . ID INCRMNT
    (27) decrement -> . ID DECRMNT

    $end            reduce using rule 11 (block -> statement .)
    }               reduce using rule 11 (block -> statement .)
    RETURN          reduce using rule 11 (block -> statement .)
    VARIABLE        shift and go to state 17
    ID              shift and go to state 18
    WHILE           shift and go to state 21
    FOR             shift and go to state 22
    IF              shift and go to state 23
    PRINT           shift and go to state 24

    statement                      shift and go to state 7
    block                          shift and go to state 27
    declaration                    shift and go to state 8
    initialization                 shift and go to state 9
    assign                         shift and go to state 10
    funcall                        shift and go to state 11
    unary                          shift and go to state 12
    while                          shift and go to state 13
    for                            shift and go to state 14
    if                             shift and go to state 15
    print                          shift and go to state 16
    increment                      shift and go to state 19
    decrement                      shift and go to state 20

state 8

    (12) statement -> declaration .

    VARIABLE        reduce using rule 12 (statement -> declaration .)
    ID              reduce using rule 12 (statement -> declaration .)
    WHILE           reduce using rule 12 (statement -> declaration .)
    FOR             reduce using rule 12 (statement -> declaration .)
    IF              reduce using rule 12 (statement -> declaration .)
    PRINT           reduce using rule 12 (statement -> declaration .)
    $end            reduce using rule 12 (statement -> declaration .)
    }               reduce using rule 12 (statement -> declaration .)
    RETURN          reduce using rule 12 (statement -> declaration .)


state 9

    (13) statement -> initialization .

    VARIABLE        reduce using rule 13 (statement -> initialization .)
    ID              reduce using rule 13 (statement -> initialization .)
    WHILE           reduce using rule 13 (statement -> initialization .)
    FOR             reduce using rule 13 (statement -> initialization .)
    IF              reduce using rule 13 (statement -> initialization .)
    PRINT           reduce using rule 13 (statement -> initialization .)
    $end            reduce using rule 13 (statement -> initialization .)
    }               reduce using rule 13 (statement -> initialization .)
    RETURN          reduce using rule 13 (statement -> initialization .)


state 10

    (14) statement -> assign .

    VARIABLE        reduce using rule 14 (statement -> assign .)
    ID              reduce using rule 14 (statement -> assign .)
    WHILE           reduce using rule 14 (statement -> assign .)
    FOR             reduce using rule 14 (statement -> assign .)
    IF              reduce using rule 14 (statement -> assign .)
    PRINT           reduce using rule 14 (statement -> assign .)
    $end            reduce using rule 14 (statement -> assign .)
    }               reduce using rule 14 (statement -> assign .)
    RETURN          reduce using rule 14 (statement -> assign .)


state 11

    (15) statement -> funcall .

    VARIABLE        reduce using rule 15 (statement -> funcall .)
    ID              reduce using rule 15 (statement -> funcall .)
    WHILE           reduce using rule 15 (statement -> funcall .)
    FOR             reduce using rule 15 (statement -> funcall .)
    IF              reduce using rule 15 (statement -> funcall .)
    PRINT           reduce using rule 15 (statement -> funcall .)
    $end            reduce using rule 15 (statement -> funcall .)
    }               reduce using rule 15 (statement -> funcall .)
    RETURN          reduce using rule 15 (statement -> funcall .)


state 12

    (16) statement -> unary .

    VARIABLE        reduce using rule 16 (statement -> unary .)
    ID              reduce using rule 16 (statement -> unary .)
    WHILE           reduce using rule 16 (statement -> unary .)
    FOR             reduce using rule 16 (statement -> unary .)
    IF              reduce using rule 16 (statement -> unary .)
    PRINT           reduce using rule 16 (statement -> unary .)
    $end            reduce using rule 16 (statement -> unary .)
    }               reduce using rule 16 (statement -> unary .)
    RETURN          reduce using rule 16 (statement -> unary .)


state 13

    (17) statement -> while .

    VARIABLE        reduce using rule 17 (statement -> while .)
    ID              reduce using rule 17 (statement -> while .)
    WHILE           reduce using rule 17 (statement -> while .)
    FOR             reduce using rule 17 (statement -> while .)
    IF              reduce using rule 17 (statement -> while .)
    PRINT           reduce using rule 17 (statement -> while .)
    $end            reduce using rule 17 (statement -> while .)
    }               reduce using rule 17 (statement -> while .)
    RETURN          reduce using rule 17 (statement -> while .)


state 14

    (18) statement -> for .

    VARIABLE        reduce using rule 18 (statement -> for .)
    ID              reduce using rule 18 (statement -> for .)
    WHILE           reduce using rule 18 (statement -> for .)
    FOR             reduce using rule 18 (statement -> for .)
    IF              reduce using rule 18 (statement -> for .)
    PRINT           reduce using rule 18 (statement -> for .)
    $end            reduce using rule 18 (statement -> for .)
    }               reduce using rule 18 (statement -> for .)
    RETURN          reduce using rule 18 (statement -> for .)


state 15

    (19) statement -> if .

    VARIABLE        reduce using rule 19 (statement -> if .)
    ID              reduce using rule 19 (statement -> if .)
    WHILE           reduce using rule 19 (statement -> if .)
    FOR             reduce using rule 19 (statement -> if .)
    IF              reduce using rule 19 (statement -> if .)
    PRINT           reduce using rule 19 (statement -> if .)
    $end            reduce using rule 19 (statement -> if .)
    }               reduce using rule 19 (statement -> if .)
    RETURN          reduce using rule 19 (statement -> if .)


state 16

    (20) statement -> print .

    VARIABLE        reduce using rule 20 (statement -> print .)
    ID              reduce using rule 20 (statement -> print .)
    WHILE           reduce using rule 20 (statement -> print .)
    FOR             reduce using rule 20 (statement -> print .)
    IF              reduce using rule 20 (statement -> print .)
    PRINT           reduce using rule 20 (statement -> print .)
    $end            reduce using rule 20 (statement -> print .)
    }               reduce using rule 20 (statement -> print .)
    RETURN          reduce using rule 20 (statement -> print .)


state 17

    (21) declaration -> VARIABLE . ID
    (22) initialization -> VARIABLE . ID = boolean

    ID              shift and go to state 28


state 18

    (23) assign -> ID . = boolean
    (28) funcall -> ID . ( paramlist )
    (26) increment -> ID . INCRMNT
    (27) decrement -> ID . DECRMNT

    =               shift and go to state 29
    (               shift and go to state 30
    INCRMNT         shift and go to state 31
    DECRMNT         shift and go to state 32


state 19

    (24) unary -> increment .

    VARIABLE        reduce using rule 24 (unary -> increment .)
    ID              reduce using rule 24 (unary -> increment .)
    WHILE           reduce using rule 24 (unary -> increment .)
    FOR             reduce using rule 24 (unary -> increment .)
    IF              reduce using rule 24 (unary -> increment .)
    PRINT           reduce using rule 24 (unary -> increment .)
    $end            reduce using rule 24 (unary -> increment .)
    }               reduce using rule 24 (unary -> increment .)
    RETURN          reduce using rule 24 (unary -> increment .)
    )               reduce using rule 24 (unary -> increment .)


state 20

    (25) unary -> decrement .

    VARIABLE        reduce using rule 25 (unary -> decrement .)
    ID              reduce using rule 25 (unary -> decrement .)
    WHILE           reduce using rule 25 (unary -> decrement .)
    FOR             reduce using rule 25 (unary -> decrement .)
    IF              reduce using rule 25 (unary -> decrement .)
    PRINT           reduce using rule 25 (unary -> decrement .)
    $end            reduce using rule 25 (unary -> decrement .)
    }               reduce using rule 25 (unary -> decrement .)
    RETURN          reduce using rule 25 (unary -> decrement .)
    )               reduce using rule 25 (unary -> decrement .)


state 21

    (36) while -> WHILE . boolean { block }
    (44) boolean -> . boolean OR boolterm
    (45) boolean -> . boolterm
    (46) boolterm -> . boolterm AND boolterm1
    (47) boolterm -> . boolterm1
    (48) boolterm1 -> . ! boolterm2
    (49) boolterm1 -> . boolterm2
    (50) boolterm2 -> . condition
    (51) boolterm2 -> . expression
    (52) boolterm2 -> . FALSE
    (53) boolterm2 -> . TRUE
    (54) condition -> . expression > expression
    (55) condition -> . expression < expression
    (56) condition -> . expression GTEQL expression
    (57) condition -> . expression LTEQL expression
    (58) condition -> . expression NOTEQL expression
    (59) condition -> . expression BOOLEQL expression
    (60) expression -> . expression + term
    (61) expression -> . expression - term
    (62) expression -> . term
    (63) term -> . term * factor1
    (64) term -> . term / factor1
    (65) term -> . factor1
    (66) factor1 -> . factor1 % factor
    (67) factor1 -> . factor
    (68) factor -> . ID
    (69) factor -> . NUMBER
    (70) factor -> . STRING
    (71) factor -> . ( expression )
    (72) factor -> . ternary
    (74) factor -> . funcall
    (73) ternary -> . ( boolean ) ? ( boolean : boolean )
    (28) funcall -> . ID ( paramlist )

    !               shift and go to state 36
    FALSE           shift and go to state 40
    TRUE            shift and go to state 41
    ID              shift and go to state 45
    NUMBER          shift and go to state 46
    STRING          shift and go to state 47
    (               shift and go to state 48

    boolean                        shift and go to state 33
    boolterm                       shift and go to state 34
    boolterm1                      shift and go to state 35
    boolterm2                      shift and go to state 37
    condition                      shift and go to state 38
    expression                     shift and go to state 39
    term                           shift and go to state 42
    factor1                        shift and go to state 43
    factor                         shift and go to state 44
    ternary                        shift and go to state 49
    funcall                        shift and go to state 50

state 22

    (37) for -> FOR . ( initialization , boolean , assign ) { block }
    (38) for -> FOR . ( initialization , boolean , unary ) { block }
    (39) for -> FOR . ID IN RANGE ( expression , expression ) { block }

    (               shift and go to state 51
    ID              shift and go to state 52


state 23

    (32) if -> IF . boolean { block } elif
    (44) boolean -> . boolean OR boolterm
    (45) boolean -> . boolterm
    (46) boolterm -> . boolterm AND boolterm1
    (47) boolterm -> . boolterm1
    (48) boolterm1 -> . ! boolterm2
    (49) boolterm1 -> . boolterm2
    (50) boolterm2 -> . condition
    (51) boolterm2 -> . expression
    (52) boolterm2 -> . FALSE
    (53) boolterm2 -> . TRUE
    (54) condition -> . expression > expression
    (55) condition -> . expression < expression
    (56) condition -> . expression GTEQL expression
    (57) condition -> . expression LTEQL expression
    (58) condition -> . expression NOTEQL expression
    (59) condition -> . expression BOOLEQL expression
    (60) expression -> . expression + term
    (61) expression -> . expression - term
    (62) expression -> . term
    (63) term -> . term * factor1
    (64) term -> . term / factor1
    (65) term -> . factor1
    (66) factor1 -> . factor1 % factor
    (67) factor1 -> . factor
    (68) factor -> . ID
    (69) factor -> . NUMBER
    (70) factor -> . STRING
    (71) factor -> . ( expression )
    (72) factor -> . ternary
    (74) factor -> . funcall
    (73) ternary -> . ( boolean ) ? ( boolean : boolean )
    (28) funcall -> . ID ( paramlist )

    !               shift and go to state 36
    FALSE           shift and go to state 40
    TRUE            shift and go to state 41
    ID              shift and go to state 45
    NUMBER          shift and go to state 46
    STRING          shift and go to state 47
    (               shift and go to state 48

    boolean                        shift and go to state 53
    boolterm                       shift and go to state 34
    boolterm1                      shift and go to state 35
    boolterm2                      shift and go to state 37
    condition                      shift and go to state 38
    expression                     shift and go to state 39
    term                           shift and go to state 42
    factor1                        shift and go to state 43
    factor                         shift and go to state 44
    ternary                        shift and go to state 49
    funcall                        shift and go to state 50

state 24

    (40) print -> PRINT . ( plist )

    (               shift and go to state 54


state 25

    (2) functionlist -> function functionlist .

    VARIABLE        reduce using rule 2 (functionlist -> function functionlist .)
    ID              reduce using rule 2 (functionlist -> function functionlist .)
    WHILE           reduce using rule 2 (functionlist -> function functionlist .)
    FOR             reduce using rule 2 (functionlist -> function functionlist .)
    IF              reduce using rule 2 (functionlist -> function functionlist .)
    PRINT           reduce using rule 2 (functionlist -> function functionlist .)


state 26

    (4) function -> FUNCTION ID . ( argument ) { block RETURN boolean }
    (5) function -> FUNCTION ID . ( argument ) { block }

    (               shift and go to state 55


state 27

    (10) block -> statement block .

    $end            reduce using rule 10 (block -> statement block .)
    }               reduce using rule 10 (block -> statement block .)
    RETURN          reduce using rule 10 (block -> statement block .)


state 28

    (21) declaration -> VARIABLE ID .
    (22) initialization -> VARIABLE ID . = boolean

    VARIABLE        reduce using rule 21 (declaration -> VARIABLE ID .)
    ID              reduce using rule 21 (declaration -> VARIABLE ID .)
    WHILE           reduce using rule 21 (declaration -> VARIABLE ID .)
    FOR             reduce using rule 21 (declaration -> VARIABLE ID .)
    IF              reduce using rule 21 (declaration -> VARIABLE ID .)
    PRINT           reduce using rule 21 (declaration -> VARIABLE ID .)
    $end            reduce using rule 21 (declaration -> VARIABLE ID .)
    }               reduce using rule 21 (declaration -> VARIABLE ID .)
    RETURN          reduce using rule 21 (declaration -> VARIABLE ID .)
    =               shift and go to state 56


state 29
